...
        }
    }
}


private fun verifyFirebaseUser(
    email: String,
    password: String,
    auth: FirebaseAuth,
    context: Context,
    navigateToHomeScreen: () -> Unit
) {
    auth.signInWithEmailAndPassword(email, password).addOnCompleteListener { task ->
        if (task.isSuccessful) {
...
